syntax = "proto3";

package task;

import "common/entities.proto";
import "common/metadata.proto";

option go_package = "github.com/compozy/compozy/pkg/pb/task";

// -----------------------------------------------------------------------------
// Task Trigger Command
// -----------------------------------------------------------------------------

message TaskTriggerCommand {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;
  common.TaskInfo task = 3;
}

// -----------------------------------------------------------------------------
// Task Execute Command
// -----------------------------------------------------------------------------

message TaskExecuteCommand {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;
  common.TaskInfo task = 3;
}

// -----------------------------------------------------------------------------
// Task Resume Command
// -----------------------------------------------------------------------------

message TaskResumeCommand {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;
  common.TaskInfo task = 3;
}
